--- a/ohhShoot/index.html
+++ b/ohhShoot/index.html
@@ -76,7 +76,7 @@
     <!-- Hero Section Begin -->
     <section class="hero">
         <div class="hero__slider owl-carousel">
-            <div class="hero__item set-bg" data-setbg="img/hero/static-background.jpg">
+            <div class="hero__item set-bg" data-setbg="img/hero/alt2.jpg">
                 <div class="container">
                     <div class="row">
                         <div class="col-lg-6">
@@ -89,7 +89,7 @@
                     </div>
                 </div>
             </div>
-            <div class="hero__item set-bg" data-setbg="img/hero/static-background.jpg">
+            <div class="hero__item set-bg" data-setbg="img/hero/alt3.jpg">
                 <div class="container">
                     <div class="row">
                         <div class="col-lg-6">
