Update hero slider and fix styling in main.js and style.css

--- a/index.html
+++ b/index.html
@@ -44,16 +44,7 @@
                         <nav class="header__nav__menu mobile-menu">
                             <ul>
                                 <li class="active"><a href="./index.html">Home</a></li>
-                                <li><a href="./about.html">About</a></li>
                                 <li><a href="./portfolio.html">Portfolio</a></li>
-                                <li><a href="./services.html">Services</a></li>
-                                <li><a href="#">Pages</a>
-                                    <ul class="dropdown">
-                                        <li><a href="./about.html">About</a></li>
-                                        <li><a href="./portfolio.html">Portfolio</a></li>
-                                        <li><a href="./blog.html">Blog</a></li>
-                                        <li><a href="./blog-details.html">Blog Details</a></li>
-                                    </ul>
                                 </li>
                                 <li><a href="./contact.html">Contact</a></li>
                             </ul>
@@ -61,7 +52,6 @@
                         <div class="header__nav__social">
                             <a href="#"><i class="fa fa-facebook"></i></a>
                             <a href="#"><i class="fa fa-twitter"></i></a>
-                            <a href="#"><i class="fa fa-dribbble"></i></a>
                             <a href="#"><i class="fa fa-instagram"></i></a>
                             <a href="#"><i class="fa fa-youtube-play"></i></a>
                         </div>
@@ -81,10 +71,13 @@
                     <div class="row">
                         <div class="col-lg-6">
                             <div class="hero__text">
-                                <span>Video editing</span>
-                                <h2>OHHSHOOT #1</h2>
+                                <span>quality</span>
+                                <h2>PRODUCTION</h2>
                                 <a href="#" class="primary-btn">Let's Get It</a>
                             </div>
+                        </div>
+                        <div class="hero__video1">
+                            <iframe id="youtube-video" width="560" height="315" src="https://www.youtube.com/embed/HIs1iEGS8NI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                         </div>
                     </div>
                 </div>
@@ -94,10 +87,13 @@
                     <div class="row">
                         <div class="col-lg-6">
                             <div class="hero__text">
-                                <span>Video editing</span>
-                                <h2>OHHSHOOT #2</h2>
+                                <span>creative</span>
+                                <h2>EDITING</h2>
                                 <a href="#" class="primary-btn">Let's Get It</a>
                             </div>
+                        </div>
+                        <div class="hero__video2">
+                            <iframe width="560" height="315" src="https://www.youtube.com/embed/yBYuAgfmpG8?si=9X53mRuVW2KPnMml" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                         </div>
                     </div>
                 </div>
@@ -107,10 +103,13 @@
                     <div class="row">
                         <div class="col-lg-6">
                             <div class="hero__text">
-                                <span>Video editing</span>
-                                <h2>OHHSHOOT #3</h2>
+                                <span>artistic</span>
+                                <h2>VISION</h2>
                                 <a href="#" class="primary-btn">Let's Get It</a>
                             </div>
+                        </div>
+                        <div class="hero__video3">
+                            <iframe width="560" height="315" src="https://www.youtube.com/embed/wxYToCliTik?si=uwO_MFDX6XEgZk2M" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                         </div>
                     </div>
                 </div>
@@ -183,7 +182,7 @@
     </section>
     <!-- Services Section End -->
 
-    <!-- Team Section Begin -->
+    <!-- About Section Begin -->
     <section class="team spad set-bg" data-setbg="img/hero/alt1.jpg">
         <div class="container">
             <div class="row">
@@ -217,22 +216,7 @@
             </div>
         </div>
     </section>
-    <!-- Team Section End -->
-
-    <!-- Call To Action Section Begin -->
-    <section class="callto spad set-bg" data-setbg="img/hero/alt2.jpg">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-8">
-                    <div class="callto__text">
-                        <h2>I'll make you say "OH SHOOT"</h2>
-                        <a href="#">Let's Get It</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-    <!-- Call To Action Section End -->
+    <!-- About Section End -->
 
     <!-- Footer Section Begin -->
     <footer class="footer">
